--- a/Aura.com/package.json
+++ b/Aura.com/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "d3-geo": "^3.1.1",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.534.0",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-player": "^3.3.1",
     "react-router-dom": "^7.7.1",
+    "react-simple-maps": "^3.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
